[package]
name = "connchk"
version = "0.4.0"
authors = ["Anthony Martinez <anthony@ajmartinez.com>"]
edition = "2018"
license = "GPL-3.0+"
readme = "README.md"
homepage = "https://gitlab.com/anthonyjmartinez/connchk"
repository = "https://gitlab.com/anthonyjmartinez/connchk.git"
description = "Cross-platform command-line network checking tool in Rust"
keywords = ["network", "CLI", "tools"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json =  "1.0"
rayon = "1.5"

[profile.release]
lto = true
panic = 'abort'