[package]
name = "connchk"
version = "0.9.2"
authors = ["Anthony Martinez <anthony@ajmartinez.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/anthonyjmartinez/connchk"
repository = "https://github.com/anthonyjmartinez/connchk.git"
description = "Cross-platform command-line network checking tool in Rust"
keywords = ["network", "CLI", "tools"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json =  "1.0"
rayon = "1.6"

[profile.release]
lto = true
panic = 'abort'
strip = true
